recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:11: error: not found: value steaps
		steaps = steaps-1
                ^